test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/static_variables_in_expressions.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[5]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: i
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  Int: 
                  CStatic: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: j
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 3
                      None: 
                    None: 
                  Int: 
                  CStatic: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: cmp
                  CSingleInit: 
                    CBinary: 
                      CLessThan: 
                      CVar: 
                        TIdentifier: i
                        None: 
                      CVar: 
                        TIdentifier: j
                        None: 
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CIf: 
                CUnary: 
                  CNot: 
                  CVar: 
                    TIdentifier: cmp
                    None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
